<resources>
    <string name="app_name">QueFaire</string>
    <string name="que_faire">Que Faire ?</string>
    <string name="todo">TODO</string>
    <string name="debuter">Débuter</string>
    <string name="quitter">Quitter</string>
    <string name="Q1Desc">Avez vous envie de sortir ?</string>
    <string name="Q2Desc">Combien êtes vous ?</string>
    <string name="Q3Desc">Aimez-vous la nature ?</string>
    <string name="A3Yes">Oui</string>
    <string name="A2Yes">Oui</string>
    <string name="P1Next">Suivant</string>
    <string name="P1Back">Retour</string>
    <string name="A2No">Non</string>
    <string name="A3No">Non</string>
    <string name="A2PeopleCount">Nombre de personne</string>
    <string name="Q4Desc">La culture vous intéresse ?</string>
    <string name="A4Yes">Oui</string>
    <string name="A4No">Non</string>
    <string name="QDesc5">Quelle culture vous intéresse ?</string>
    <string name="QDesc6">Quand quel mood êtes-vous ?</string>
    <string name="QDesc7">Quel age as-tu/avez-vous ?</string>
    <string name="A7age">Age du groupe</string>
    <string name="ButtonBack2">Retour</string>
    <string name="ButtonNext2">Suivant</string>
    <string name="ButtonBack3">Retour</string>
    <string name="ButtonNext3">Suivant</string>
    <string name="QDesc8">Voulez-vous des activités payantes ou gratuites?</string>
    <string name="A8no">Gratuite</string>
    <string name="A8yes">Payante</string>
    <string name="QDesc9">Quel(s) activité(s) faites vous souvents ?</string>
    <string name="ButtonBack4">Retour</string>
    <string name="ButtonNext4">Suivant</string>
    <string name="A9Drink">Boire un coup</string>
    <string name="A9Netflix">Netflix</string>
    <string name="A9Sport">Du Sport</string>
    <string name="A9VideoGame">Jeu Vidéo</string>
    <string name="A9BoardGame">Jeu de société</string>
    <string name="A9Walking">Se Balader</string>
    <string name="A9Cinema">Cinéma</string>
    <string name="A9Shooping">Shooping</string>
    <string name="A9ThemeParc">Parc d\'attraction</string>
    <string name="A9Read">Lire</string>
    <string name="A9Eat">Manger</string>
    <string name="A9Sleep">Dormir</string>
    <string name="A9EscapeGame">Escape Game</string>
    <string name="A9Museum">Musée</string>
    <string name="QDesc10">Avez-vous chaud ou envie d’être mouillé(e) ?</string>
    <string name="QDesc11">Voulez vous une activité à sensation ?</string>
    <string name="QDesc12">Voulez-vous voir des animeaux ?</string>
    <string name="ButtonBack5">Retour</string>
    <string name="BuutonNext5">Suivant</string>
    <string name="ADesc10DontKnow">Ne sais pas</string>
    <string name="ADesc10Yes">Oui</string>
    <string name="ADesc10No">Non</string>
    <string name="ButtonAnotherChoice">Propose moi autre chose</string>
    <string name="TextResultDesc">On vous conseille l\'activité suivante :</string>
    <string name="ResultTitle">Résultat</string>
    <string name="ButtonExit">Quitter</string>
    <string name="ButtonBackResult">Retour</string>
</resources>