<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".questions_page4">

    <TextView
        android:id="@+id/questions9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:text="@string/QDesc9"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="260dp"
        android:layout_height="336dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="@+id/questions9"
        app:layout_constraintTop_toBottomOf="@+id/questions9">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/answer9Drink"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/A9Drink" />

            <CheckBox
                android:id="@+id/answer9VideoGame"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/A9VideoGame" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/answer9Sport"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/A9Sport" />

            <CheckBox
                android:id="@+id/answer9BoardGame"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/A9BoardGame" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/answer9Walking"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/A9Walking" />

            <CheckBox
                android:id="@+id/answer9Netflix"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/A9Netflix" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/answer9ThemePark"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:text="@string/A9ThemeParc"
                tools:layout_editor_absoluteX="130dp"
                tools:layout_editor_absoluteY="9dp" />

            <CheckBox
                android:id="@+id/answer9Read"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/A9Read" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/answer9EscapeGame"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/A9EscapeGame" />

            <CheckBox
                android:id="@+id/answer9Eat"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/A9Eat" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/answer9Shooping"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/A9Shooping" />

            <CheckBox
                android:id="@+id/answer9sleep"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/A9Sleep" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/answer9Cinema"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/A9Cinema" />

            <CheckBox
                android:id="@+id/answer9Museum"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/A9Museum" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/backButtonPage4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:onClick="back"
        android:text="@string/ButtonBack4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/NextButtonPage4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/NextButtonPage4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:onClick="next"
        android:text="@string/ButtonNext4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/backButtonPage4" />

</androidx.constraintlayout.widget.ConstraintLayout>