<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionsPage1">

    <TextView
        android:id="@+id/question1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:text="@string/Q1Desc"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="174dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="@+id/question1"
        app:layout_constraintTop_toBottomOf="@+id/question1">

        <RadioButton
            android:id="@+id/answer1yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/A2Yes"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <RadioButton
            android:id="@+id/answer1no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/A2No"
            tools:ignore="DuplicateSpeakableTextCheck" />
    </RadioGroup>

    <TextView
        android:id="@+id/question2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/Q2Desc"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/question1"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup3" />

    <EditText
        android:id="@+id/answer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/A2PeopleCount"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="@+id/question2"
        app:layout_constraintTop_toBottomOf="@+id/question2" />

    <TextView
        android:id="@+id/question3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/Q3Desc"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/question2"
        app:layout_constraintTop_toBottomOf="@+id/answer2" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="174dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="@+id/question3"
        app:layout_constraintTop_toBottomOf="@+id/question3">

        <RadioButton
            android:id="@+id/answer3yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/A3Yes" />

        <RadioButton
            android:id="@+id/answer3no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/A3No" />
    </RadioGroup>

    <Button
        android:id="@+id/NextButtonPage1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:onClick="next"
        android:text="@string/P1Next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/backButtonPage1" />

    <Button
        android:id="@+id/backButtonPage1"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="32dp"
        android:onClick="back"
        android:text="@string/P1Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/NextButtonPage1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>